<resources>
    <string name="app_name" />

    <!-- REGISTER FORM -->
    <string name="login">Log in</string>
    <string name="create">Create an account</string>
    <string name="privacyText">By continuing, you agree to our User Agreement and Privacy Policy.</string>
    <string name="acceptCheckBoxForm">I agree to get emails about cool stuff on Reddit.</string>
    <string name="continueGoogle">Continue with Google</string>
    <string name="continueApple">Continue with Apple</string>
    <string name="home">Home</string>
    <string name="browse">Browse</string>
    <string name="post">Post</string>
    <string name="chat">Chat</string>
    <string name="inbox">Inbox</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="popular">Popular</string>
    <string name="awarded">Awarded</string>
    <string name="or">OR</string>
    <string name="continueButton">Continue</string>
    <string name="signUp">Sign Up</string>
    <string name="forgotPass">Forgot Password?</string>

    <!-- HOME SCREEN -->
    <string name="skip">Skip</string>
    <string name="continueEmail">Continue with Email</string>
    <string name="redditor">Already a redditor?</string>
    <string name="diveInto">Dive into</string>
    <string name="subredditHomeScreen">r/Subredditlicious</string>
    <string name="search">Search</string>

    <!-- Post adapter -->
    <string name="awards">%1$d Awards</string>
    <string name="subtitle">Posted by u/%1$s • %2$s • i.redd.it</string>
    <string name="my_profile">My profile</string>
    <string name="reddit_coins">Reddit Coins</string>
    <string name="reddit_premium">Reddit Premium</string>
    <string name="saved">Saved</string>
    <string name="history">History</string>
    <string name="create_a_community">Create a community</string>


    <!-- NAVIGATION DRAWER -->
    <string name="createAvatar">Create Avatar</string>
    <string name="userDrawer">u/Dapal897</string>
    <string name="karmaNumDrawer">43</string>
    <string name="karmaTextDrawer">Karma</string>
    <string name="redditAgeDrawer">3y 2m</string>
    <string name="reddit_ageDrawer">Reddit age</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="post_to_reddit">Post to Reddit</string>
    <string name="link">LINK</string>
    <string name="image">IMAGE</string>
    <string name="video">VIDEO</string>
    <string name="text">TEXT</string>
    <string name="poll">POLL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="prefs_file">cat.itb.clonreddit.PREFERENCE.KEY.FILE</string>


    <string name="choose_a_community">Choose a community</string>
    <string name="communities">Communities</string>
    <string name="image_post">Image post</string>
    <string name="an_interesting_title">An interesting title</string>
    <string name="text_post">Text post</string>
    <string name="your_text_post_optional">Your text post (optional)</string>


    <string name="required">Required field</string>
    <string name="notMatchEmail">Wrong email</string>
    <string name="notMatchPass">Wrong password</string>
    <string name="comments">Comments</string>

    <string name="all_required_fields">All required fields have to be filled</string>
    <string name="your_comment">Your comment</string>
    <string name="add_comment">Add comment</string>
    <string name="add_a_coment">Add a coment</string>
    <string name="create_an_account_to_continue">Create an account to continue</string>
    <string name="no_user">No username</string>
</resources>