<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_bg"
    android:orientation="vertical"
    tools:context=".fragments.BottomSheetFragment">

    <TextView
        android:id="@+id/textView"
        style="@style/TitleBottomSheet"
        android:text="@string/post_to_reddit"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/button"
        style="@style/ButtonsBottomSheet"
        android:src="@drawable/ic_baseline_link_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView2"
        style="@style/ButtonsBottomSheet"
        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView3"
        style="@style/ButtonsBottomSheet"
        android:src="@drawable/ic_baseline_smart_display_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView4"
        style="@style/ButtonsBottomSheet"
        android:src="@drawable/ic_baseline_receipt_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView5"
        style="@style/ButtonsBottomSheet"
        android:src="@drawable/ic_baseline_format_list_numbered_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/linkTextView"
        style="@style/SubtitleButtonBottomSheet"
        android:text="@string/link"

        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />


    <TextView
        android:id="@+id/imageTextView"
        style="@style/SubtitleButtonBottomSheet"
        android:text="@string/image"

        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <TextView
        android:id="@+id/videoTextView"
        style="@style/SubtitleButtonBottomSheet"

        android:text="@string/video"

        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textTextView"
        style="@style/SubtitleButtonBottomSheet"
        android:text="@string/text"

        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />


    <TextView
        android:id="@+id/pollTextView"
        style="@style/SubtitleButtonBottomSheet"
        android:text="@string/poll"

        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />


    <ImageView
        android:id="@+id/closeBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/X.close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>