<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.ClonReddit"
    tools:context=".fragments.RegisterFragment">

    <ImageView
        android:id="@+id/closeBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/X.close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/icnIMG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/reddit_share_circle_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:theme="@style/Theme.ClonReddit.LogReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeBTN"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleForm"
            style="@style/Theme.ClonReddit.TitulosForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/policyUserTextView"
            style="@style/Theme.ClonReddit.SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacyText"
            android:textSize="15sp"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            style="@style/Theme.ClonReddit.CheckForm"
            android:id="@+id/checkBoxRegisterForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acceptCheckBoxForm" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleRegisterBTN"
            style="@style/BlueButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continueGoogle"
            app:icon="@drawable/google_icon"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/appleRegisterBTN"
            style="@style/BlueButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continueApple"
            app:icon="@drawable/apple_icon"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <View
                android:id="@+id/lineLeft"
                style="@style/LineStyle"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/materialTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView"
                style="@style/Theme.ClonReddit.SimpleText"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="OR"/>

            <View
                android:id="@+id/lineRight"
                style="@style/LineStyle"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/materialTextView"
                app:layout_constraintTop_toTopOf="parent" />




        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>