<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/redditMascotDrawer"
        style="@style/MascotDrawer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nameUserDrawer"
        style="@style/UserNameDrawer"
        android:text="@string/userDrawer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redditMascotDrawer" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAvatarButtonDrawer"
        style="@style/CreateAvatarButtonDrawer"
        android:text="@string/createAvatar"
        app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
        app:iconGravity="end"
        app:iconPadding="-20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameUserDrawer" />

    <RelativeLayout
        android:id="@+id/relativeLayoutDrawe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAvatarButtonDrawer">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/karmaImageViewDrawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_filter_vintage_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/karmaNumDrawer"
                style="@style/NumDataDrawer"
                android:text="@string/karmaNumDrawer"
                app:layout_constraintStart_toEndOf="@+id/karmaImageViewDrawer"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/karmatTitleDrawer"
                style="@style/TextDataDrawer"
                android:text="@string/karmaTextDrawer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/karmaImageViewDrawer"
                app:layout_constraintTop_toBottomOf="@+id/karmaNumDrawer" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/lineVerticalDrawer"
            style="@style/VerticalLineSeparatorDrawer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/materialTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/lineVerticalDrawer">


            <ImageView
                android:id="@+id/ageImageViewDrawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_storage_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/ageNumDrawer"
                style="@style/NumDataDrawer"
                android:text="@string/redditAgeDrawer"

                app:layout_constraintStart_toEndOf="@+id/ageImageViewDrawer"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/ageTitleDrawer"
                style="@style/TextDataDrawer"
                android:text="@string/reddit_ageDrawer"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ageImageViewDrawer"
                app:layout_constraintTop_toBottomOf="@+id/ageNumDrawer" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <View
        android:id="@+id/lineHorizontalDrawer"
        style="@style/HorizontalLineSeparatorDrawer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutDrawe" />

</androidx.constraintlayout.widget.ConstraintLayout>